finished stat homework 2

--- a/mStat1/HW 2.ipynb
+++ b/mStat1/HW 2.ipynb
@@ -250,7 +250,7 @@
    "source": [
     "Certainly, the first assumption you have to make is that each animal is equally likely to be captured both times. \n",
     "\n",
-    "The way I would estimate the population size is by simulation, as I have done above. There we can see that a population of about 250 animals gives us close to the desired result. One could also estimate the population size with math, but that isn't the way I would do it."
+    "The way I would estimate the population size is by simulation, as I have done above. There we can see that a population of about 250 animals gives us close to the desired result. "
    ]
   },
   {
@@ -328,7 +328,7 @@
     "x = [5.3299,6.5941,4.1547,4.2537,3.5281,2.2799,3.1502,4.7433,3.7032,.1077,1.6070,1.5977,6.3923,5.4920,3.1181,1.7220]\n",
     "n = len(x)\n",
     "mu = mean(x)\n",
-    "var = (1/(len(x)-1))*sum((x-mu)**2)\n",
+    "var = (1/n)*sum((x-mu)**2)\n",
     "print(\"mean\", mu)\n",
     "print(\"variance\", var)"
    ]
@@ -478,10 +478,19 @@
     "\n",
     "taking the derivative and setting it to zero yields:\n",
     "\n",
-    "$$0 = \\frac n {\\theta + 1} + \\sum \\ln(X_i) ~~~~ \\rightarrow ~~~~~~ \\hat{\\theta} = 1 - \\frac n {\\sum \\ln(X_i)}$$\n",
+    "$$0 = \\frac n {\\theta + 1} + \\sum \\ln(X_i) ~~~~ \\rightarrow ~~~~~~ \\hat{\\theta} = -1 - \\frac n {\\sum \\ln(X_i)}$$\n",
     "\n",
     "Checking the second derivative yields: $-n/(1+\\theta)^2$ which is always negative, so we know we have found the maximum."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
