union-find added

--- a/spectral/Basic Graph Theory.ipynb
+++ b/spectral/Basic Graph Theory.ipynb
@@ -105,34 +105,97 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "source": [
-    "\"There are several matrices naturally associated with a graph and its vector spaces. The adjacency matrix $A = A(G) = (a_{ij})$ of a graph $G$ is the $n \\times n$ matrix given by\n",
+    "Let's do our first data structure: Union-Find and use this with some of that sparse data matrix thing.\n",
     "\n",
-    "$$a_{ij} = \\begin{cases} 1 ~~ if v_i v_j \\in E(G) \\\\ 0 ~~ otherwise \\end{cases}$$\n",
-    "\n",
-    "Let $D = (D_{ij})$ be the $n \\times n$ diagonal matrix with $D_{ii} = d(v_i)$, the degree of $v_i$ in G.  The matrix $L = D - A$ is called the <i>combinatorial Laplacian</i> or <i>Kirchhoff matrix</i>. \n",
-    "\n",
-    "The vertex space $C_0(G)$ of a graph G is the complex vector space of all functions from V(G) into $\\mathbb{C}$. Once again we take $V(G) = \\{v_1, v_2, ... , v_n\\}$, so that dim $C_0(G) = n$,  and we write the elements of  $C_0(G)$ in the form $\\mathbf {x} = \\sum_{i=1}^n x_i v_i$ or $\\mathbf{x} = (x_i)_1^n$; here $x_i$ is the value of $\\bf{x}$ at $v_i$, also called the <i>weight</i> at $v_i$. The space  $C_0(G)$ is given the natural inner prodeuct associated with the basis $(v_i)_1^n$ :   $~~<\\mathbf{ x} , \\mathbf{ y}> = \\sum_{i=1}^n x_i \\bar {y_i}$. \n",
-    "\n",
-    "\""
+    "I guess for this one it's easiest to use object oriented programming"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "\"\n",
-    "The adjacency matrix A is real and symmetric, so it is <i>hermition</i>, that is, $<A \\mathbf{x}, \\mathbf{y}> = < \\mathbf{x}, A \\mathbf{y}>$. Hence its <i>numerical range</i>\n",
+    "class Graph(object):\n",
+    "    \"\"\"Undirected Graph with Union-Find Data Structure\"\"\"\n",
+    "    \n",
+    "    def __init__(self, n):\n",
+    "        if(n < 1):\n",
+    "            raise IndexError(\"n must be at least one\")\n",
+    "        if(type(n) != int):\n",
+    "            raise KeyError(\"n must be an integer\")\n",
+    "        self.order = n\n",
+    "        self.points_to = [i for i in range(self.order)] #To keep track of the unions   \n",
+    "        \n",
+    "        #We won't be using the following two for union-find, but they're useful in general\n",
+    "        self.size = 0\n",
+    "        self.edges = {}\n",
+    "        \n",
+    "    def union(self, x, y, weight = 1):\n",
+    "        \"\"\"Here we do union\"\"\"\n",
+    "        if(x >= self.order or y >= self.order):\n",
+    "            raise IndexError(\"x and y must be less than n\")\n",
     "\n",
-    "$$V(A) = \\{ <A \\mathbf{x}, \\mathbf{x}> : ~~~||\\mathbf{x}|| = 1 \\}$$\n",
+    "        #Many ways to control where it points\n",
+    "        #I chose to simply point to the smallest member\n",
+    "        if(y > x):\n",
+    "            self.points_to[y] = x\n",
+    "        else:\n",
+    "            self.points_to[x] = y\n",
+    "            \n",
+    "        self.edges[(x,y)] = weight     \n",
+    "        self.edges[(y,x)] = weight\n",
+    "        self.size += weight\n",
+    "        \n",
+    "    def find(self, x):\n",
+    "        \"\"\"Here we do find\"\"\"\n",
+    "        if(x >= self.order):\n",
+    "            raise IndexError(\"x must be less than n\")\n",
+    "        out = x\n",
+    "        while(True):\n",
+    "            if(out == self.points_to[out]):\n",
+    "                break\n",
+    "            else:\n",
+    "                out = self.points_to[out]\n",
+    "        return out  \n",
+    "    \n",
+    "    def connected(self):\n",
+    "        \"\"\"Checks to see if the graph is all connected\"\"\"\n",
+    "        out = True\n",
+    "        for i in range(self.order):\n",
+    "            if(self.find(i) != 0): #zero because we always point to the smallest when we union\n",
+    "                out = False\n",
+    "                break\n",
+    "        return out\n",
+    "        \n",
+    "        \n",
     "\n",
-    "is a closed interval of the real line. \n",
+    "G = Graph(5) \n",
     "\n",
-    "The <i>distinct</i> eigenvalues of A are real, say $\\mu_1 > \\mu_2 > ... > \\mu_t$, and V(A) is exactly the interval $[\\mu_t , \\mu_1]$ (I need a proof for that) \n",
+    "G.union(0,1)\n",
+    "G.union(1,2)\n",
+    "G.union(2,3)\n",
     "\n",
+    "print(G.connected())\n",
     "\n",
-    "\""
+    "G.union(3,4)\n",
+    "\n",
+    "print(G.connected())"
    ]
   },
   {
