--- a/spectral/Laplacian and eigenpairs.ipynb
+++ b/spectral/Laplacian and eigenpairs.ipynb
@@ -4,6 +4,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\"There are several matrices naturally associated with a graph and its vector spaces. The adjacency matrix $A = A(G) = (a_{ij})$ of a graph $G$ is the $n \\times n$ matrix given by\n",
+    "\n",
+    "$$a_{ij} = \\begin{cases} 1 ~~ if v_i v_j \\in E(G) \\\\ 0 ~~ otherwise \\end{cases}$$\n",
+    "\n",
+    "Let $D = (D_{ij})$ be the $n \\times n$ diagonal matrix with $D_{ii} = d(v_i)$, the degree of $v_i$ in G.  The matrix $L = D - A$ is called the <i>combinatorial Laplacian</i> or <i>Kirchhoff matrix</i>. \n",
+    "\n",
+    "The vertex space $C_0(G)$ of a graph G is the complex vector space of all functions from V(G) into $\\mathbb{C}$. Once again we take $V(G) = \\{v_1, v_2, ... , v_n\\}$, so that dim $C_0(G) = n$,  and we write the elements of  $C_0(G)$ in the form $\\mathbf {x} = \\sum_{i=1}^n x_i v_i$ or $\\mathbf{x} = (x_i)_1^n$; here $x_i$ is the value of $\\bf{x}$ at $v_i$, also called the <i>weight</i> at $v_i$. The space  $C_0(G)$ is given the natural inner prodeuct associated with the basis $(v_i)_1^n$ :   $~~<\\mathbf{ x} , \\mathbf{ y}> = \\sum_{i=1}^n x_i \\bar {y_i}$. \n",
+    "\n",
+    "\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"\n",
+    "The adjacency matrix A is real and symmetric, so it is <i>hermition</i>, that is, $<A \\mathbf{x}, \\mathbf{y}> = < \\mathbf{x}, A \\mathbf{y}>$. Hence its <i>numerical range</i>\n",
+    "\n",
+    "$$V(A) = \\{ <A \\mathbf{x}, \\mathbf{x}> : ~~~||\\mathbf{x}|| = 1 \\}$$\n",
+    "\n",
+    "is a closed interval of the real line. \n",
+    "\n",
+    "The <i>distinct</i> eigenvalues of A are real, say $\\mu_1 > \\mu_2 > ... > \\mu_t$, and V(A) is exactly the interval $[\\mu_t , \\mu_1]$ (I need a proof for that) \n",
+    "\n",
+    "\n",
+    "\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\"In a graph G, let $d_v$ denote the degree of the vertex $v$. We first define the Laplacian for graphs without loops and multiple edges. To begin, we consider the matrix L,\n",
     "\n",
     "$$L(u,v) = \\begin{cases} \n",
