--- a/spectral/Laplacian and eigenpairs.ipynb
+++ b/spectral/Laplacian and eigenpairs.ipynb
@@ -89,12 +89,115 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "source": [
+    "##QR Algorithm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"The basis for the QR method for calculating the eigenvalues of A is the fact that an $n \\times n$ real matrix can be written as \n",
+    "\n",
+    "$$A = QR$$\n",
+    "\n",
+    "where Q is orthogonal and R is upper triangular. (I'll probably need some of these definitions as well later). The method is efficient for the calculation of all eigenvalues of a matrix.\"\n",
+    "\n",
+    "\"The construction of Q and R proceeds as follows. Matrices $P_1, P_2, ... , P_{n-1}$ are constructed so that $P_{n-1}P_{n-2}\\cdot \\cdot \\cdot P_2 P_1 A = R$ is upper triangular. These matrices can be chosen as orthogonal matrices and are called <i>householder matrices</i>. If we let \n",
+    "\n",
+    "$$Q^T = P_{n-1}P_{n-2}\\cdot \\cdot \\cdot P_2 P_1$$\n",
+    "\n",
+    "then we have $Q^T A = R$\" and therefore $A = QR$ (because of orthogonality or something like that)\n",
+    "\n",
+    "\"We discuss the construction of the P's presently. First we state how the QR factorization of A is used to find eigenvalues of A. We define sequences of matrices $A_1, A_2, ..., A_m, ...; Q_1, Q_2, ..., Q_m, ... ; R_1, R_2, ..., R_m, ...$ by this process:\n",
+    "\n",
+    "<b>Step 1.</b> Set $A_1 = A, Q_1 = Q$ and $R_1 = R$\n",
+    "\n",
+    "<b>Step 2.</b> Set $A_2 = R_{1} Q_{1}$; then factor $A_2$ as $A_2 = Q_2 R_2$ (QR factorization of $A_2$)\n",
+    "\n",
+    "<b>Step m.</b> Set $A_m = R_{m-1} Q_{m-1}$; then factor $A_m$ as $A_m = Q_m R_m$ (QR factorization of $A_m$)\n",
+    "\n",
+    "\n",
+    "\"Matrix $A_m$ will tend toward a triangular or nearly triangular  form. Thus the eigenvalues will of $A_m$ will be easy to calculate\",i.e., they're just the diagonal entries \". The importance is that if the eigenvalues can be ordered as $|\\lambda_1|>|\\lambda_2|> ... > |\\lambda_n|>0$, then the following is true:\n",
+    "\n",
+    "As m increases the eigenvalues of $A_m$ approach the eigenvalues of A.\n",
+    "\n",
+    "The proof of this fact is well beyond the scope of this book.\n",
+    "\n",
+    "Furthermore, \"If A is symmetric, matrices $A_m$ converge to a diagonal matrix with the eigenvalues on the diagonal\"\n",
+    "\n",
+    "\"Finally, after we find the eigenvalues of A, the corresponding eigenvectors can be found by solving $(\\lambda \\mathbb{I} - A) X = 0$, subject to some side condition such as $|X| = 1$\"\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From http://www.math.tamu.edu/~dallen/linear_algebra/chpt6.pdf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"The idea in QR factorization is to first find $P_1$ which, when multiplied on the left of A, will produce zeros belos $a_{11}$. That is, we want"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$P_1 \\left(\\begin{matrix} \n",
+    "a_{11} \\ a_{12} \\ ... \\ a_{1n} \\\\\n",
+    "a_{21} \\ a_{22} \\ ... \\ a_{2n} \\\\\n",
+    "\\vdots \\ ~~~ \\ddots \\ ~~~ \\vdots \\\\\n",
+    "a_{n1} \\ a_{n2} \\ ... \\ a_{nn}\\\\\n",
+    "\\end{matrix}\\right)\n",
+    "=\n",
+    " \\left(\\begin{array} \n",
+    "\\tilde {a_{11}} \\ ~~ \\tilde {a_{12}} \\ ... \\ \\tilde {a_{1n}} \\\\\n",
+    "\\textbf{0} \\ ~~ \\tilde {a_{22}} \\ ... \\ \\tilde {a_{2n}} \\\\\n",
+    "\\vdots \\ ~~~~~ \\ddots \\ ~~~~~ \\vdots \\\\\n",
+    "\\textbf{0} \\ ~~ \\tilde {a_{n2}} \\ ... \\ \\tilde {a_{nn}}\\\\\n",
+    "\\end{array}\\right)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After this is done, we find $P_2$ which will produce"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$P_2 P_1 A = P_2  \\left(\\begin{matrix} \n",
+    "\\tilde {a_{11}} \\ ~~ \\tilde {a_{12}} \\ ... \\ \\tilde {a_{1n}} \\\\\n",
+    "\\textbf{0} \\ ~~ \\tilde {a_{22}} \\ ... \\ \\tilde {a_{2n}} \\\\\n",
+    "\\vdots \\ ~~~~~ \\ddots \\ ~~~~~ \\vdots \\\\\n",
+    "\\textbf{0} \\ ~~ \\tilde {a_{n2}} \\ ... \\ \\tilde {a_{nn}}\\\\\n",
+    "\\end{matrix}\\right)=\n",
+    " \\left(\\begin{matrix} \n",
+    "\\hat {a_{11}} \\ ~ \\hat {a_{12}} ~ \\hat {a_{13}} \\ ... \\ \\hat {a_{1n}} \\\\\n",
+    "\\textbf{0} \\ ~ \\hat {a_{22}} ~ \\hat {a_{23}} \\ ... \\ \\hat {a_{2n}} \\\\\n",
+    "\\textbf{0} \\ ~~ \\textbf {0} ~~~~~ \\hat {a_{33}}  \\ ... \\ ~~ \\hat {a_{3n}} \\\\\n",
+    "\\vdots \\ ~~~~ \\ddots \\ ~~~~~ \\vdots \\\\\n",
+    "\\textbf{0} \\ ~~~~~ \\textbf{0} \\ ~~ \\hat {a_{3n}} \\ ... \\ \\hat {a_{nn}}\\\\\n",
+    "\\end{matrix}\\right)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
