started a small test suite

--- a/spectral/Matrix Kernel.ipynb
+++ b/spectral/Matrix Kernel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -46,7 +46,7 @@
        "       [ -2,   1,   2,  -3]])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -70,7 +70,7 @@
        "       [ 0.66666667,  1.        ,  0.        ]])"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -95,7 +95,7 @@
        "       [  0.        ,   0.        ,   0.2       ,  -0.2       ]])"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -118,7 +118,7 @@
        "         5.00000000e+00])"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -142,7 +142,7 @@
        "       [ 0. ,  0. ,  0. ]])"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -164,18 +164,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1. -0. -0.  2.]\n",
-      " [ 0.  1.  0.  3.]\n",
-      " [ 0.  0.  1. -1.]]\n",
-      "[[ 1. -0. -0.  2.]\n",
-      " [ 0.  1.  0.  3.]\n",
-      " [ 0.  0.  1. -1.]]\n"
+      "[[ 1.        -0.        -0.         2.0000002]\n",
+      " [ 0.         1.         0.         2.9999994]\n",
+      " [ 0.         0.         1.        -1.       ]]\n",
+      "[[ -3.          -1.           2.         -11.        ]\n",
+      " [  0.           1.66666667   0.66666667   4.33333333]\n",
+      " [  0.           0.           0.2         -0.2       ]]\n"
      ]
     }
    ],
    "source": [
     "def row_echelon(L):\n",
-    "    b = L[:] #weird... I can't seem to copy (do I need to go deep?)\n",
+    "    n = L.shape[0]\n",
+    "    b = array([[float(L[i][j]) for j in range(L.shape[1])] for i in range(n)])\n",
+    "    b = around(b,6)  #cutting off at 6 decimal places\n",
     "    for i in reversed(range(b.shape[0])):\n",
     "        if(b[i][i] == 0):\n",
     "            print(\"woh, zero\")\n",
@@ -195,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -210,7 +212,7 @@
        "       [ 0. ,  0. ,  0. ,  0. ,  0. ]])"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +229,7 @@
     "            continue        \n",
     "        for j in range(i+1,n):\n",
     "            b[j] = b[j] - b[i]*b[j][i]/b[i][i]  \n",
-    "    return b\n",
+    "    return around(b,6) #cutting off at 6 decimal places\n",
     "\n",
     "L = array([[2,-1,-1.0,0,0],[-1,2,-1,0,0],[-1,-1,2,0,0],[0,0,0,1,-1],[0,0,0,-1,1]])\n",
     "gaussian_elim(L)"
@@ -235,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -258,7 +260,7 @@
        "       [ 0.,  0.,  0.,  0.,  0.]])"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -285,7 +287,7 @@
        "       [ 0. ,  0. , -1. ,  1. ]])"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,6 +296,118 @@
     "A = array([[2,1,-1,8],[-3,-1,2,-11],[-2,1, 2, -3]])\n",
     "a = gaussian_elim(A)\n",
     "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 8, -1, -1, -1, -1, -1, -1, -1, -1,  0],\n",
+       "       [-1,  6, -1, -1,  0, -1,  0, -1, -1,  0],\n",
+       "       [-1, -1,  5, -1,  0, -1, -1,  0,  0,  0],\n",
+       "       [-1, -1, -1,  7, -1, -1,  0,  0, -1, -1],\n",
+       "       [-1,  0,  0, -1,  7, -1, -1, -1, -1, -1],\n",
+       "       [-1, -1, -1, -1, -1,  6,  0,  0,  0, -1],\n",
+       "       [-1,  0, -1,  0, -1,  0,  6, -1, -1, -1],\n",
+       "       [-1, -1,  0,  0, -1,  0, -1,  5, -1,  0],\n",
+       "       [-1, -1,  0, -1, -1,  0, -1, -1,  6,  0],\n",
+       "       [ 0,  0,  0, -1, -1, -1, -1,  0,  0,  4]])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def make_rand_weighted_L(n):\n",
+    "    A = abs(randn(n**2)).reshape(n,n)\n",
+    "    A += A.T\n",
+    "    np.fill_diagonal(A, 0)\n",
+    "    D = diag(A.sum(1))\n",
+    "    L = D - A\n",
+    "    return L\n",
+    "\n",
+    "def make_rand_unweighted_L(n, p):\n",
+    "    A = [[0 for i in range(n)] for j in range(n)]\n",
+    "    for i in range(n):\n",
+    "        for j in range(i+1, n):\n",
+    "            if(rand()<p):\n",
+    "                A[i][j] = A[j][i] = 1\n",
+    "    A = array(A)            \n",
+    "    D = diag(A.sum(1))\n",
+    "    L = D - A\n",
+    "    return L                     \n",
+    "    \n",
+    "\n",
+    "make_rand_L(4)\n",
+    "make_rand_unweighted_L(10,0.6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "woh, zero\n",
+      "woh, zero\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def test():\n",
+    "    A = make_rand_L(7)\n",
+    "    a = gaussian_elim(A)\n",
+    "    b,c = lu(A, permute_l=True)\n",
+    "    return np.array_equal(row_echelon(a) ,row_echelon(c))\n",
+    "test()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 3.02806384, -0.79186279, -1.32849967, -0.90770137],\n",
+       "       [-0.79186279,  2.2564115 , -0.49011014, -0.97443857],\n",
+       "       [-1.32849967, -0.49011014,  2.73751134, -0.91890153],\n",
+       "       [-0.90770137, -0.97443857, -0.91890153,  2.80104147]])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A"
    ]
   },
   {
