started a small test suite

--- a/spectral/Matrix Kernel.ipynb
+++ b/spectral/Matrix Kernel.ipynb
@@ -346,7 +346,7 @@
     "    return L                     \n",
     "    \n",
     "\n",
-    "make_rand_L(4)\n",
+    "make_rand_weighted_L(4)\n",
     "make_rand_unweighted_L(10,0.6)"
    ]
   },
@@ -378,7 +378,7 @@
    ],
    "source": [
     "def test():\n",
-    "    A = make_rand_L(7)\n",
+    "    A = make_rand_weighted_L(7)\n",
     "    a = gaussian_elim(A)\n",
     "    b,c = lu(A, permute_l=True)\n",
     "    return np.array_equal(row_echelon(a) ,row_echelon(c))\n",
